--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
   "author": "jmelnich",
   "license": "ISC",
   "devDependencies": {
-    "webpack": "^4.20.2"
+    "css-loader": "^1.0.0",
+    "style-loader": "^0.23.1",
+    "webpack": "^4.20.2",
+    "webpack-cli": "^3.1.2"
   }
 }
