--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
   "author": "jmelnich",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.1.2",
+    "babel-loader": "^8.0.4",
+    "babel-preset-env": "^1.7.0",
     "css-loader": "^1.0.0",
     "file-loader": "^2.0.0",
     "node-sass": "^4.9.4",
