--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon --watch server --exec babel-node -- server/index.js",
+    "start": "nodemon --watch server --exec babel-node -- server/index.js --mode development",
     "build": "webpack --mode production"
   },
   "keywords": [
