--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon --watch server --exec babel-node -- server/index.js --mode development",
+    "dev": "webpack --mode development",
     "build": "webpack --mode production"
   },
   "keywords": [
@@ -14,10 +15,11 @@
   "author": "jmelnich",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.1.2",
     "babel-cli": "^6.26.0",
-    "babel-loader": "^8.0.4",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
     "css-loader": "^1.0.0",
     "file-loader": "^2.0.0",
     "node-sass": "^4.9.4",
@@ -28,6 +30,8 @@
     "webpack-cli": "^3.1.2"
   },
   "dependencies": {
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "react": "^16.5.2",
+    "react-dom": "^16.5.2"
   }
 }
