--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "css-loader": "^1.0.0",
     "file-loader": "^2.0.0",
     "node-sass": "^4.9.4",
+    "nodemon": "^1.18.4",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "url-loader": "^1.1.2",
     "webpack": "^4.20.2",
-    "webpack-cli": "^3.1.2"
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-middleware": "^3.4.0"
   },
   "dependencies": {
     "express": "^4.16.4",
