--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon --watch server --exec babel-node -- server/index.js --mode development",
-    "dev": "webpack --mode development",
+    "dev": "nodemon --watch server --exec babel-node -- server/index.js --hot --mode development",
     "build": "webpack --mode production"
   },
   "keywords": [
@@ -24,12 +23,14 @@
     "file-loader": "^2.0.0",
     "node-sass": "^4.9.4",
     "nodemon": "^1.18.4",
+    "react-hot-loader": "^4.3.11",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "url-loader": "^1.1.2",
     "webpack": "^4.20.2",
     "webpack-cli": "^3.1.2",
-    "webpack-dev-middleware": "^3.4.0"
+    "webpack-dev-middleware": "^3.4.0",
+    "webpack-hot-middleware": "^2.24.3"
   },
   "dependencies": {
     "express": "^4.16.4",
