--- a/client-webpack-boilerplate/package.json
+++ b/client-webpack-boilerplate/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "bidding",
+  "name": "webpack-boilerplate",
   "version": "1.0.0",
-  "description": "bidding",
+  "description": "webpack 4 boilerplate",
   "main": "index.js",
   "scripts": {
     "dev": "webpack-dev-server --mode development --open",
@@ -10,39 +10,23 @@
   "keywords": [
     "js"
   ],
-  "author": "wd",
+  "author": "jmelnich",
   "license": "ISC",
   "devDependencies": {
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
     "css-loader": "^1.0.0",
     "file-loader": "^2.0.0",
     "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.9.4",
-    "react-hot-loader": "^4.3.11",
     "sass-loader": "^7.1.0",
     "scss-loader": "0.0.1",
     "style-loader": "^0.23.1",
     "url-loader": "^1.1.2",
     "webpack": "^4.20.2",
     "webpack-cli": "^3.1.2",
-    "webpack-dev-middleware": "^3.4.0",
     "webpack-dev-server": "^3.1.10",
     "webpack-hot-middleware": "^2.24.3"
-  },
-  "dependencies": {
-    "availity-reactstrap-validation": "^2.3.3",
-    "axios": "^0.18.0",
-    "bootstrap": "^4.1.3",
-    "react": "^16.5.2",
-    "react-dom": "^16.5.2",
-    "react-redux": "^5.1.0",
-    "react-router-dom": "^4.3.1",
-    "reactstrap": "^6.5.0",
-    "redux": "^4.0.1",
-    "redux-thunk": "^2.3.0"
   }
 }
