--- a/markup-webpack/package.json
+++ b/markup-webpack/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "webpack-dev-server --mode development --open",
-    "build:prod": "webpack --mode production",
-    "build:dev": "webpack --mode development"
+    "build": "webpack --mode production"
   },
   "keywords": [
     "js"
