add eslint configurations

--- a/client-react-webpack/.eslintrc.json
+++ b/client-react-webpack/.eslintrc.json
@@ -1,5 +1,12 @@
 {
-  "rules": {
-    "max-len": [2, 80, 8]
-  }
+  "globals": {
+    "document": true,
+    "window": true
+  },
+  "extends": ["airbnb"],
+  "plugins": [
+    "jsx-a11y",
+    "react",
+    "import"
+  ]
 }
