--- a/server-client-react-webpack/package.json
+++ b/server-client-react-webpack/package.json
@@ -5,21 +5,34 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon --watch server --exec babel-node -- server/index.js --hot --mode development",
-    "build": "webpack --mode production"
+    "start": "nodemon --watch server --exec babel-node -- server/index.js --hot --env development",
+    "build": "rimraf build && webpack --env production"
   },
   "keywords": [
     "js"
   ],
-  "author": "jmelnich",
+  "author": "jm",
   "license": "ISC",
   "devDependencies": {
+    "autoprefixer": "^9.5.1",
+    "copy-webpack-plugin": "^5.0.2",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^1.0.0",
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-loader": "^2.1.2",
+    "eslint-plugin-import": "^2.17.2",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-react": "^7.12.4",
+    "html-loader": "^0.5.5",
+    "imagemin-webpack-plugin": "^2.4.2",
+    "mini-css-extract-plugin": "^0.6.0",
+    "postcss-loader": "^3.0.0",
+    "rimraf": "^2.6.3",
     "file-loader": "^2.0.0",
     "node-sass": "^4.9.4",
     "nodemon": "^1.18.4",
@@ -29,6 +42,7 @@
     "url-loader": "^1.1.2",
     "webpack": "^4.20.2",
     "webpack-cli": "^3.1.2",
+    "webpack-merge": "^4.2.1",
     "webpack-dev-middleware": "^3.4.0",
     "webpack-hot-middleware": "^2.24.3"
   },
