--- a/server-client-react-webpack/package.json
+++ b/server-client-react-webpack/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon --watch server --exec babel-node -- server/index.js --hot --mode development",
+    "dev": "nodemon --watch server --exec babel-node -- server/index.js --hot --env development",
     "build": "webpack --mode production"
   },
   "keywords": [
@@ -14,27 +14,37 @@
   "author": "jmelnich",
   "license": "ISC",
   "devDependencies": {
+    "autoprefixer": "^9.6.0",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^1.0.0",
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-loader": "^2.1.2",
+    "eslint-plugin-import": "^2.17.2",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-react": "^7.12.4",
     "file-loader": "^2.0.0",
+    "jest": "^24.8.0",
     "node-sass": "^4.9.4",
     "nodemon": "^1.18.4",
-    "react-hot-loader": "^4.3.11",
+    "postcss-loader": "^3.0.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "url-loader": "^1.1.2",
     "webpack": "^4.20.2",
     "webpack-cli": "^3.1.2",
     "webpack-dev-middleware": "^3.4.0",
-    "webpack-hot-middleware": "^2.24.3"
+    "webpack-hot-middleware": "^2.24.3",
+    "webpack-merge": "^4.2.1"
   },
   "dependencies": {
     "express": "^4.16.4",
     "react": "^16.5.2",
-    "react-dom": "^16.5.2"
+    "react-dom": "^16.5.2",
+    "react-hot-loader": "^4.3.11"
   }
 }
